--- a/01-intro/01-hello-world/solution.html
+++ b/01-intro/01-hello-world/solution.html
@@ -1,1 +1,9 @@
 <!-- Напишите решение сюда -->
+<!DOCTYPE html>
+    <head>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>«Hello world.»</h1>>
+    </body>
+</html>
