--- a/02-dz0/01-semantic-mockup/solution.html
+++ b/02-dz0/01-semantic-mockup/solution.html
@@ -1,4 +1,94 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <!-- Ваше решение -->
+    <head>
+        <meta charset="UTF-8">
+        <style>
+            * {
+                margin: 0;
+                padding: 0;
+            }
+
+            header {
+                background: red;
+                display: block;
+            }
+
+            h1 {
+                text-align: center;
+                color: white;
+            }
+
+            h2 {
+                color: white;
+            }
+
+            nav {
+                background: orange;
+                padding: 10px 0;
+                text-align: center;
+            }
+
+            nav a {
+                color: white;
+                font-size: 20px;
+            }
+
+            main {
+                background: green;
+                padding: 10px;
+            }
+
+            article {
+                background: blue;
+                padding: 20px 10px;
+                margin-bottom: 5px;
+            }
+
+            article ul, article ol {
+                padding: 20px 20px 0 20px;
+                color: white;
+            }
+
+            footer {
+                background: purple;
+            }
+
+            footer p {
+                color: white;
+                font-size: 36px;
+                text-align: center;
+            }
+        </style>
+    </head>
+    <body>
+        <header>
+            <h1>Header</h1>
+            <nav>
+                <a href="#">Navigation 1</a>
+                <a href="#">Navigation 2</a>
+                <a href="#">Navigation 3</a>
+            </nav>
+        </header>
+        <main>
+            <article>
+                <h2>Article 1</h2>
+                <ul>
+                    <li>Оригинальная трилогия</li>
+                    <li>Трилогия приквелов</li>
+                    <li>Трилогия сиквелов</li>
+                </ul>
+            </article>
+            <article>
+                <h2>Article 2</h2>
+                <ol>
+                    <li>Эпизод IV — Новая надежда</li>
+                    <li>Эпизод V — Империя наносит ответный удар</li>
+                    <li>Эпизод VI — Возвращение джеда</li>
+                </ol>
+            </article>
+        </main>
+        <footer>
+            <p>Footer</p>
+        </footer>
+    </body>
 </html>
